--- a/style/settings.css
+++ b/style/settings.css
@@ -889,9 +889,9 @@ h6,
 /* @end */
 /* @end */
 /* @group Custom */
+/* @Group Scrollbar */
 body {
   scrollbar-face-color: [[setting:themecolor]];
-  scrollbar-shadow-color: [[setting:themetextcolor]];
   scrollbar-highlight-color: [[setting:themenavcolor]];
   scrollbar-3dlight-color: [[setting:themenavcolor]];
   scrollbar-darkshadow-color: [[setting:themecolor]];
@@ -909,10 +909,11 @@ body {
 }
 ::-webkit-scrollbar-thumb {
   background-color: [[setting:themecolor]];
-  border: 2px solid [[setting:themetextcolor]];
+  border: 0px;
 }
 ::-webkit-scrollbar-corner {
   background-color: [[setting:themecolor]];
 }
+/* @end Scrollbar */
 /* @end Custom */
 /*# sourceMappingURL=/theme/essential/style/settings.treasure.map */
